; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-form.c_show_tx_dialog.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-form.c_show_tx_dialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32* }
%struct.TYPE_5__ = type { i32 }

@tx_input = common dso_local global i32 0, align 4
@ctx = common dso_local global i32 0, align 4
@ui = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@tx_dialog = common dso_local global i32 0, align 4
@tx_widget = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @show_tx_dialog(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32, i32* @ctx, align 4
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @pdf_field_value(i32 %3, i32 %6)
  %8 = call i32 @ui_input_init(i32* @tx_input, i32 %7)
  store i32* @tx_input, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ui, i32 0, i32 1), align 8
  %9 = load i32, i32* @tx_dialog, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ui, i32 0, i32 0), align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** @tx_widget, align 8
  ret void
}

declare dso_local i32 @ui_input_init(i32*, i32) #1

declare dso_local i32 @pdf_field_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
